[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3.1.6", features = ["derive"] }
eyre = "^0.6.7"
g-code = "^0.3.3"
resvg = "^0.22.0"
roxmltree = "^0.14.1"
svg2gcode = "^0.0.7"
tiny-skia = "^0.6.3"
tracing = "^0.1.31"
usvg = "0.22.0"

[features]
